# live-asr-sherpa

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmark/: benchmark.py  metrics.py  requirements.txt
data/: Japanese Speech Recognition Dataset.csv  README.md  happy_50_gtts.txt
sherox/: __init__.py  asr.py  asr_engine.py  audio.py  config.py  segment.py  streaming.py  tts.py
src/: asr_engine.py  audio.py  config.py  main.py  streaming.py
tests/: conftest.py  test_asr.py  test_asr_engine.py  test_audio.py  test_benchmark.py  test_benchmark_metrics.py  test_config.py  test_main.py  test_streaming.py
